--- a/VroomVroom/layouts/Settings.json
+++ b/VroomVroom/layouts/Settings.json
@@ -11,7 +11,7 @@
 					"properties": {
 						"text": "SETTINGS",
 						"enable-bbcode": true,
-						"font": "Impact",
+						"font": "Morspeed-7Be1D",
 						"size": 274.40000000000015,
 						"line-height": 0,
 						"bold": false,
@@ -33,9 +33,9 @@
 					"instanceVariables": {},
 					"behaviors": {},
 					"world": {
-						"x": 1052,
-						"y": 17,
-						"width": 1797,
+						"x": 726,
+						"y": -1,
+						"width": 2592,
 						"height": 872,
 						"originX": 0,
 						"originY": 0,
